Correct items on the 'Depends' line in the debian/control file.

--- a/debian/control
+++ b/debian/control
@@ -35,11 +35,11 @@ Depends: adduser,
          libmoose-perl,
          libmoosex-nonmoose-perl,
          libnumber-format-perl,
-         libpgobject-perl (>= 1.403.2-1,
+         libpgobject-perl (>= 1.403.2-1),
          libpgobject-simple-perl (>= 3.000002-1),
-         libpgobject-simple-role-perl (>= 2.000000-1,
+         libpgobject-simple-role-perl (>= 2.000000-1),
          libpgobject-type-bigfloat-perl,
-         libpgobject-type-bytestring-perl (>= 1.1.1-1,
+         libpgobject-type-bytestring-perl (>= 1.1.1-1),
          libpgobject-type-datetime-perl,
          libpgobject-util-dbmethod-perl,
          libpgobject-util-dbadmin-perl,
