--- a/debian/control
+++ b/debian/control
@@ -63,7 +63,7 @@ Recommends: libjson-xs-perl,
             texlive-latex-recommended
 Suggests: default-mta | mail-transport-agent,
           latex-cjk-all,
-          ledgersmb-1.5-apache | ledgersmb-1.5-nginx
+          ledgersmb-1.5-apache | ledgersmb-1.5-nginx,
           libimage-size-perl,
           libopenoffice-oodoc-perl,
           libx12-parser-perl,
