--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Depends: adduser,
          libcarp-always-perl,
          libcgi-emulate-psgi-perl,
          libcgi-simple-perl,
+         libclass-c3-xs-perl,
          libconfig-inifiles-perl,
          libdatetime-perl,
          libdatetime-format-strptime-perl,
