'apache2 | nginx-light | nginx-full | nginx-extra' as Recommends.

--- a/debian/control
+++ b/debian/control
@@ -56,7 +56,8 @@ Depends: adduser,
          ucf,
          ${misc:Depends},
          ${perl:Depends}
-Recommends: libjson-xs-perl,
+Recommends: apache2 | nginx-light | nginx-full | nginx-extra,
+            libjson-xs-perl,
             liblatex-driver-perl (>= 0.300.2),
             libmath-bigint-gmp-perl,
             libtemplate-plugin-latex-perl (>=3.09-1),
