Change the Priority in debian/control from 'extra' back to 'optional'.
As of Debian Policy 4.0.1; The "extra" priority has been deprecated and should
be treated as equivalent to "optional". All "extra" priorities should be changed
to "optional". (See section 2.5)

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: ledgersmb
 Section: web
-Priority: extra
+Priority: optional
 Maintainer: LedgerSMB Core Team <devel@lists.ledgersmb.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9),
