Add a line for lsmb_proxy to the debian/ledgersmb.config file.

--- a/debian/ledgersmb.config
+++ b/debian/ledgersmb.config
@@ -11,6 +11,7 @@ db_get ledgersmb/debconf_install
 if [ "$RET" = true ];then
     db_input high ledgersmb/admin_login || true
     db_input high ledgersmb/admin_password || true
+    db_input high ledgersmb/lsmb_proxy || true
     db_go || true
 fi
 
