Rewrite debian/ledgersmb.config for new upstream package.
Rewrote the debian/ledgersmb.config file as follows:
- Dropped the use of the debconf_install question altogether.
- Moved question regarding lsmb_proxy out of the if-then block.
- Changed if-then block to check if this is during a new package install.
- Add comments as needed.

--- a/debian/ledgersmb.config
+++ b/debian/ledgersmb.config
@@ -1,18 +1,20 @@
-#!/bin/sh
+#!/bin/bash
 
 set -e
 
+
 . /usr/share/debconf/confmodule
 
-db_input high ledgersmb/debconf_install || true
+# Get web proxy selection
+db_input high ledgersmb/lsmb_proxy || true
 db_go || true
 
-db_get ledgersmb/debconf_install
-if [ "$RET" = true ];then
+# If this is a new install, then get DB Admin user and password.
+# Or also if called with 'reconfigure' instead of 'configure'?
+if [ -z "$2" ]; then
     db_input high ledgersmb/admin_login || true
     db_input high ledgersmb/admin_password || true
-    db_input high ledgersmb/lsmb_proxy || true
     db_go || true
-fi
+if
 
 exit 0
