Change debian/rules to use conf/ledgersmb.conf.unbuilt-dojo

--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 	dh $@ --with systemd
 
 override_dh_auto_configure:
-	cp conf/ledgersmb.conf.default ledgersmb.conf
+	cp conf/ledgersmb.conf.unbuilt-dojo ledgersmb.conf
 	cp conf/systemd/starman-ledgersmb.service debian/ledgersmb.service
 
 override_dh_auto_build:
