--- a/debian/control
+++ b/debian/control
@@ -73,14 +73,14 @@ Suggests: default-mta | mail-transport-agent,
           texlive-xetex
 Description: financial accounting and ERP program
  LedgerSMB is a full featured double-entry financial accounting and Enterprise
- Resource Planning system accessed via a web browser (Perl/SQL backend) which
- offers "Accounts Receivable", "Accounts Payable" and "General Ledger" tracking
- as well as inventory control and fixed assets handling. The LedgerSMB client
- can be a web browser or a programmed API call. The goal of the LedgerSMB
- project is to bring high quality ERP and accounting capabilities to Small
- and Midsize Businesses.
+ Resource Planning system accessed via a web browser (Perl/JS with a PostgreSQL
+ backend) which offers "Accounts Receivable", "Accounts Payable" and "General
+ Ledger" tracking as well as inventory control and fixed assets handling. The
+ LedgerSMB client can be a web browser or a programmed API call. The goal of
+ the LedgerSMB project is to bring high quality ERP and accounting capabilities
+ to Small and Midsize Businesses.
  .
  The application now defaults to being made available on port 5762 and being
  run directly by Starman instead of by Apache. If other access is needed, a
- Reverse Proxy can be configured locally using Apache or Nginx. For more
- information, please see /usr/share/doc/ledgersmb/README.Debian.
+ Reverse Proxy can be configured locally using Apache, Nginx, Lighttpd, or
+ Varish. For more information, please see /usr/share/doc/ledgersmb/README.Debian.
