Add 'liblocale-codes-perl' as a Depends in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Depends: adduser,
          libhttp-exception-perl,
          libjs-dojo-dijit,
          libjson-perl,
+         liblocale-codes-perl,
          liblocale-maketext-lexicon-perl (>= 0.62-1),
          liblog-log4perl-perl,
          libnamespace-autoclean-perl,
