Remove unneeded Suggested packages in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,7 @@ Depends: adduser,
          libdbd-pg-perl,
          libdbi-perl,
          libfile-mimeinfo-perl,
+         libhtml-escape-perl,
          libhttp-exception-perl,
          libjs-dojo-dijit,
          libjson-perl,
@@ -64,7 +65,6 @@ Recommends: apache2 | nginx-light | nginx-full | nginx-extra,
             texlive-latex-recommended
 Suggests: default-mta | mail-transport-agent,
           latex-cjk-all,
-          ledgersmb-1.5-apache | ledgersmb-1.5-nginx,
           libimage-size-perl,
           libopenoffice-oodoc-perl,
           libx12-parser-perl,
