Replace 'libfile-mimeinfo-perl' with 'libmime-types-perl' in debian/control.
Noted in an email on 13 April 2018: the dependency on File::MimeInfo was changed
to MIME::Types due to the fact that the former depends on freedesktop.org while
the latter has its own MIME database built in, thus reducing the number of
external dependencies.

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,6 @@ Depends: adduser,
          libdatetime-format-strptime-perl,
          libdbd-pg-perl,
          libdbi-perl,
-         libfile-mimeinfo-perl,
          libhtml-escape-perl,
          libhttp-exception-perl,
          libjs-dojo-dijit,
@@ -33,6 +32,7 @@ Depends: adduser,
          liblog-log4perl-perl,
          libnamespace-autoclean-perl,
          libmime-lite-perl,
+         libmime-types-perl,
          libmoose-perl,
          libmoosex-nonmoose-perl,
          libnumber-format-perl,
