Add 'libversion-compare-perl' package as a Depends in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -49,6 +49,7 @@ Depends: adduser,
          libplack-request-withencoding-perl,
          libtemplate-perl (>=2.14-1),
          libtry-tiny-perl,
+         libversion-compare-perl,
          libxml-simple-perl,
          perl,
          postgresql-client,
