--- a/debian/control
+++ b/debian/control
@@ -58,7 +58,8 @@ Depends: adduser,
          ucf,
          ${misc:Depends},
          ${perl:Depends}
-Recommends: apache2 | nginx-light | nginx-full | nginx-extra,
+Recommends: apache2 | nginx-light | nginx-full | nginx-extra |
+            lighttpd | varnish,
             libjson-xs-perl,
             liblatex-driver-perl (>= 0.300.2),
             libmath-bigint-gmp-perl,
