Explicitly add 'libio-stringy-perl' to the Depends in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Depends: adduser,
          libdbi-perl,
          libhtml-escape-perl,
          libhttp-exception-perl,
+         libio-stringy-perl,
          libjs-dojo-dijit,
          libjson-perl,
          liblocale-codes-perl,
