--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Depends: adduser,
          libcgi-simple-perl,
          libclass-c3-xs-perl,
          libconfig-inifiles-perl,
+         libdata-uuid-perl,
          libdatetime-perl,
          libdatetime-format-strptime-perl,
          libdbd-pg-perl,
