--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,8 @@ Priority: optional
 Maintainer: LedgerSMB Core Team <devel@lists.ledgersmb.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9.20160709),
+               texlive-latex-recommended,
+               texlive-xetex,
                po-debconf
 Standards-Version: 4.2.1
 Homepage: http://www.ledgersmb.org/
