--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Build-Depends-Indep: libcgi-emulate-psgi-perl,
                      libplack-builder-conditionals-perl,
                      libplack-middleware-reverseproxy-perl,
                      libplack-request-withencoding-perl,
+                     libtap-parser-sourcehandler-pgtap-perl,
                      libtemplate-perl (>=2.14),
                      libtemplate-plugin-latex-perl (>=3.09),
                      libtest-trap-perl,
