--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: LedgerSMB Core Team <devel@lists.ledgersmb.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
-Build-Depends: debhelper (>= 9.20160709),
+Build-Depends: debhelper (>= 10),
                texlive-latex-recommended,
                texlive-xetex,
                po-debconf
