Fix formatting of d/control (add ',' separator on Uploaders)

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ledgersmb
 Section: web
 Priority: optional
 Maintainer: LedgerSMB Core Team <devel@lists.ledgersmb.org>
-Uploaders: Robert James Clay <jame@rocasa.us>
+Uploaders: Robert James Clay <jame@rocasa.us>,
            Erik Huelsmann <ehuels@gmail.com>
 Build-Depends: debhelper (>= 10),
                texlive-latex-recommended,
