Fix lintian errors and warnings to prepare for next release series

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: LedgerSMB Core Team <devel@lists.ledgersmb.org>
 Uploaders: Robert James Clay <jame@rocasa.us>,
            Erik Huelsmann <ehuels@gmail.com>
 Build-Depends: debhelper (>= 10),
+               dh-systemd,
                texlive-latex-recommended,
                texlive-xetex,
                po-debconf
